# fray

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  notes.md  p.py
datafusion_ray/: __init__.py  core.py
py/: entrypoint.py
src/: context.rs  dataframe.rs  entrypoint.rs  lib.rs  run.rs  streaming_processor_service.rs  util.rs
src/proto/: datafusion_ray.proto  streaming.proto  streaming_tasks.proto
src/proto/src/: datafusion_ray.proto  streaming.proto  streaming_tasks.proto
src/python/: mod.rs  py_entrypoint.rs  py_scheduling_details.rs  py_task_definition.rs  py_utils.rs  remote_processor.rs  streaming_processor_service.rs
src/streaming/: action_stream.rs  checkpoint_storage_manager.rs  collect.rs  coordinator.rs  generation.rs  input_manager.rs  input_reference_mapper.rs  mod.rs  output_manager.rs  partitioning.rs  runtime.rs  serialization.rs  streaming_processor_service.rs  task_definition.rs  task_definition_2.rs  task_function.rs  task_main.rs  task_main_2.rs  task_main_3.rs  task_runner.rs  worker_process.rs
src/streaming/operators/: count_by_key.rs  count_star.rs  filter.rs  identity.rs  mod.rs  nested.rs  operator.rs  projection.rs  remote_exchange.rs  remote_source.rs  serialization.rs  source.rs  task_function.rs  union.rs
src/streaming/operators/remote_source/: barrier_with_result.rs  fibres.rs  mod.rs  remote_source.rs  shared_fibre_state.rs  utils.rs
src/streaming/operators/utils/: borrowed_stream.rs  chunked_stream.rs  example_ref_storage.rs  fiber_stream.rs  lazy_operator.rs  mod.rs  stateful_operator.rs
src/streaming/processor/: flight_data_encoder.rs  flight_handler.rs  mod.rs  stream_serialization.rs
src/streaming/runtime/: data_client_manager.rs  data_exchange_manager.rs  mod.rs  runtime.rs
src/streaming/runtime/exchange_manager/: data_channels.rs  data_exchange_manager.rs  mod.rs  once_notify.rs
src/streaming/state/: checkpoint_storage.rs  file_system.rs  mod.rs  state.rs
src/streaming/tasks/: filter.rs  identity.rs  mod.rs  projection.rs  source.rs  task_function.rs  task_functions.rs  union.rs
src/streaming/translation/: mod.rs  translate_physical_plan.rs
src/streaming/utils/: create_remote_stream.rs  mod.rs  retry.rs  scheduling.rs  serde_serialization.rs  sync_safe.rs  task_def_builder.rs  test_utils.rs
