# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion_ray"
description = "DataFusion on Ray"
homepage = "https://github.com/apache/datafusion-ray"
repository = "https://github.com/apache/datafusion-ray"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
rust-version = "1.86"
build = "build.rs"

[patch.crates-io]
datafusion = { path = "datafusion/datafusion/core" }
datafusion-common = { path = "datafusion/datafusion/common" }
#datafusion_common-runtime = { path = "datafusion/datafusion/common-runtime" }
datafusion-catalog = { path = "datafusion/datafusion/catalog" }
#datafusion_core = { path = "datafusion/datafusion/core" }
datafusion-expr = { path = "datafusion/datafusion/expr" }
datafusion-expr-common = { path = "datafusion/datafusion/expr-common" }
datafusion-execution = { path = "datafusion/datafusion/execution" }
datafusion-ffi = { path = "datafusion/datafusion/ffi" }
datafusion-functions = { path = "datafusion/datafusion/functions" }
datafusion-functions-aggregate = { path = "datafusion/datafusion/functions-aggregate" }
datafusion-functions-aggregate-common = { path = "datafusion/datafusion/functions-aggregate-common" }
datafusion-functions-table = { path = "datafusion/datafusion/functions-table" }
datafusion-functions-nested = { path = "datafusion/datafusion/functions-nested" }
datafusion-functions-window = { path = "datafusion/datafusion/functions-window" }
datafusion-functions-window-common = { path = "datafusion/datafusion/functions-window-common" }
datafusion-optimizer = { path = "datafusion/datafusion/optimizer" }
datafusion-physical-expr = { path = "datafusion/datafusion/physical-expr" }
datafusion-physical-expr-common = { path = "datafusion/datafusion/physical-expr-common" }
datafusion-physical-optimizer = { path = "datafusion/datafusion/physical-optimizer" }
datafusion-physical-plan = { path = "datafusion/datafusion/physical-plan" }
datafusion-proto = { path = "datafusion/datafusion/proto" }
#datafusion_proto/gen = { path = "datafusion/datafusion/proto/gen" }
#datafusion_proto-common = { path = "datafusion/datafusion/proto-common" }
#datafusion_proto-common/gen = { path = "datafusion/datafusion/proto-common/gen" }
datafusion-sql = { path = "datafusion/datafusion/sql" }
#datafusion-sqllogictest = { path = "datafusion/datafusion/sqllogictest" }
#datafusion-substrait = { path = "datafusion/datafusion/substrait" }
#datafusion-wasmtest = { path = "datafusion/datafusion/wasmtest" }
#datafusion-examples = { path = "datafusion/datafusion-examples" }
#datafusion-examples/examples/ffi/ffi_example_table_provider = { path = "datafusion/datafusion-examples/examples/ffi/ffi_example_table_provider" }
#datafusion-examples/examples/ffi/ffi_module_interface = { path = "datafusion/datafusion-examples/examples/ffi/ffi_module_interface" }
#datafusion-examples/examples/ffi/ffi_module_loader = { path = "datafusion/datafusion-examples/examples/ffi/ffi_module_loader" }
#test-utils = { path = "datafusion/test-utils" }
#benchmarks = { path = "datafusion/benchmarks" }

[dependencies]
anyhow = "1"
arrow = { version = "54", features = ["pyarrow", "ipc"] }
arrow-schema = "54"
arrow-array = "54"
arrow-flight = "54"
async-stream = "0.3"
async-channel = "2.3"
async-trait = "0.1.85"
bytesize = "1.3"
bytes = "1.10.1"
datafusion = { version = "45", features = ["pyarrow", "avro"] }
#datafusion = { path = "datafusion/datafusion/core", features = ["pyarrow", "avro"] }
datafusion-python = { version = "45" }
datafusion-proto = "45"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3.31"
glob = "0.3.1"
itertools = "0.14"
local-ip-address = "0.6"
log = "0.4"
object_store = { version = "0.11.0", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
prost = "0.13"
protobuf-src = "2.1"
pyo3 = { version = "0.23", features = [
  "extension-module",
  "abi3",
  "abi3-py38",
] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
pyo3-pylogger = "0.3.0"
rust_decimal = "1.36"
tokio = { version = "1.43", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-stream = "0.1"

tonic = { version = "0.12.3", default-features = false, features = [
  "transport",
  "codegen",
  "prost",
] }
uuid = "1.11.0"
url = "2"
arrow-cast = "54.2.1"
rand = "0.9.0"
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
flexbuffers = "24.12.23"
flatbuffers = "24.12.23"
crossbeam = "0.8.4"
flume = "0.11.1"
eyeball = { version = "0.8.8", features = ["async-lock"] }

[build-dependencies]
prost-types = "0.13"
rustc_version = "0.4.0"
tonic-build = { version = "0.8", default-features = false, features = [
  "transport",
  "prost",
] }
url = "2"

[dev-dependencies]
tempfile = "3.17"

[lib]
name = "datafusion_ray"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "datafusion_ray._datafusion_ray_internal"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = 0

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
